@@ -1,4 +1,5 @@
 1.2-beta2
+ * Make hint delivery asynchronous (CASSANDRA-4761)
  * Pluggable Thrift transport factories for CLI and cqlsh (CASSANDRA-4609, 4610)
  * cassandra-cli: allow Double value type to be inserted to a column (CASSANDRA-4661)
  * Add ability to use custom TServerFactory implementations (CASSANDRA-4608)
